# sm-locp

./: CHANGELOG.md  GOVERNANCE.md  README.md  WHITEPAPER.md  pyproject.toml
examples/: basic_compliance.py  example_policy.json  example_regime.py
sm_locp/: __init__.py  engine.py  json_theory_loader.py  mrr_evaluator.py  mrr_loader.py  regime.py  status_list.py  vc_generator.py  vc_verifier.py
sm_locp/persistence/: __init__.py  canonical.py  filesystem.py  memory.py  protocol.py  records.py
sm_locp/schemas/: mrr.schema.json
tests/: conftest.py  test_engine.py  test_mrr.py  test_regime.py  test_vc.py
tests/persistence/: conformance.py  test_filesystem.py  test_memory.py
