[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sm-locp"
version = "0.1.0"
description = "Stellarminds Open Compliance Protocol — defeasible logic engine, machine-readable regulations, and W3C Verifiable Credentials for autonomous compliance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "stellarminds.ai" },
]
keywords = ["nanda", "compliance", "defeasible", "verifiable-credentials", "regulations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "coverage>=7.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["sm_locp"]

[tool.coverage.report]
show_missing = true
fail_under = 80
